# simple-conda-cpp-template-project

./: .gitignore  1-Deploy.bat  1-Deploy.sh  2-Build.bat  2-Build.sh  CMakeLists.txt  README.md  environment.yml  main.cpp
cmake/: copy_dll.cmake
